ventanas almacenero editado

--- a/src/main/java/com/proyecto/vista/VentanaGestorCategoriasProducto.form
+++ b/src/main/java/com/proyecto/vista/VentanaGestorCategoriasProducto.form
@@ -41,14 +41,14 @@
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Group type="102" attributes="0">
+              <Group type="102" alignment="0" attributes="0">
                   <EmptySpace min="-2" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" attributes="0">
-                          <Component id="title" max="32767" attributes="0"/>
-                          <EmptySpace min="-2" pref="699" max="-2" attributes="0"/>
+                          <Component id="title" min="-2" pref="722" max="-2" attributes="0"/>
+                          <EmptySpace max="32767" attributes="0"/>
                       </Group>
-                      <Group type="102" alignment="1" attributes="0">
+                      <Group type="102" attributes="0">
                           <Group type="103" groupAlignment="1" attributes="0">
                               <Group type="102" attributes="0">
                                   <EmptySpace min="-2" pref="548" max="-2" attributes="0"/>
@@ -75,7 +75,7 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace min="-2" max="-2" attributes="0"/>
-                  <Component id="title" pref="84" max="32767" attributes="0"/>
+                  <Component id="title" min="-2" pref="84" max="-2" attributes="0"/>
                   <EmptySpace min="-2" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="1" attributes="0">
                       <Component id="categorySearchField" min="-2" pref="40" max="-2" attributes="0"/>
@@ -97,7 +97,7 @@
       <SubComponents>
         <Component class="javax.swing.JLabel" name="title">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Proveedores"/>
+            <Property name="text" type="java.lang.String" value="GESTOR DE CATEGORIAS PARA PRODUCTOS"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="categorySearchField">
